samples/_failures_safe/1761071412_c39ef4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29406422.c: In function ‘tokenize’:
./samples/SAFE/__tmp_29406422.c:169:40: error: expected declaration or statement at end of input
  169 | int tokenize(const char *input, struct Token tokens[], int max_tokens) {
      |                                        ^~~~~
